--- a/frontend/inventario/package.json
+++ b/frontend/inventario/package.json
@@ -31,6 +31,8 @@
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.5.0",
+    "react-router-dom": "^7.5.0",
     "recharts": "^2.15.2"
   },
   "devDependencies": {
