--- a/frontend/inventario/package.json
+++ b/frontend/inventario/package.json
@@ -29,8 +29,11 @@
     "@tiptap/starter-kit": "^2.11.7",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "i18next": "^25.1.2",
+    "i18next-browser-languagedetector": "^8.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0",
