--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./app.js",
-    "initDb": "node database/init.js"
+    "initDb": "node database/init.js",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
